--- a/kaku-infrastructure/application/module/firelens/Dockerfile
+++ b/kaku-infrastructure/application/module/firelens/Dockerfile
@@ -1,2 +1,2 @@
-FROM amazon/aws-for-fluent-bit:latest
+FROM --platform=linux/x86_64 amazon/aws-for-fluent-bit:latest
 COPY extra.conf /fluent-bit/etc/extra.conf
