FluentBitの設定(正規表現)を調整

--- a/kaku-infrastructure/application/module/firelens/extra.conf
+++ b/kaku-infrastructure/application/module/firelens/extra.conf
@@ -1,11 +1,11 @@
 [FILTER]
     Name         rewrite_tag
     Match        *-firelens-*
-    Rule         $log (?i)Completed 500 Internal Server Error 500_error false
+    Rule         $log (500) 500-error false
 
 [OUTPUT]
     Name   cloudwatch_logs
-    Match  500_error
+    Match  500-error
     region ap-northeast-1
     log_group_name /kaku/puma
     log_stream_prefix fluentbit
